# tree-sitter-moju

./: .gitignore  Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
examples/: order-system.mju
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: architecture_and_verify.txt  basic.txt  dataflow_target_binding.txt  failure_and_message.txt  interface_storage_config.txt  new_language_design_syntax.txt
