[package]
name = "tree-sitter-moju"
description = "MoJu grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "moju"]
categories = ["parsing", "text-editors"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
